--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Data": {
+    "SportsStoreProducts": {
+      "ConnectionString": "Server=.;Database=SportsStoreV2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
+  }
 }
