add unit test for paging

--- a/SportsStore.Tests/SportsStore.Tests.csproj
+++ b/SportsStore.Tests/SportsStore.Tests.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="Moq" Version="4.13" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Razor">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.razor\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Razor.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
