--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -8,6 +8,9 @@
   "Data": {
     "SportsStoreProducts": {
       "ConnectionString": "Server=.;Database=SportsStoreV2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "SportStoreIdentity": {
+      "ConnectionString": "Server=.;Database=SportsStoreV2_Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
