add and execute migrations for the AppIdentityDbContext

--- a/SportsStore/appsettings.json
+++ b/SportsStore/appsettings.json
@@ -9,7 +9,7 @@
     "SportsStoreProducts": {
       "ConnectionString": "Server=.;Database=SportsStoreV2;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-    "SportStoreIdentity": {
+    "SportsStoreIdentity": {
       "ConnectionString": "Server=.;Database=SportsStoreV2_Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
